Fixed 1 line in CSS that caused weird scrollbars.

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -12,5 +12,8 @@ html, body {
   padding: 0;
   font-family: 'Roboto';
   background-color: #fffef7;
+}
+
+html {
   overflow-y: scroll;
 }
